Changes to Version 1.9-2

  o Updated Korean translation and getting-started document (thanks to Shin Jong-Hwa).

  o Small fixes.

Changes to Version 1.9-1

  o Updated version of Getting Started With the R Commander.

  o Updated Italian translation (thanks to Stefano Calza).

  o Updated Japanese translation (thanks to Takaharu Araki).

  o Updated Korean translation and new Korean getting-started document (thanks to Shin Jong-Hwa).
 
  o Updated Polish translation (thanks to Lukasz Daniel)

  o Updated Romanian translation (thanks to Adrian Dusa).

  o Updated Russian translation (thanks to Alexey Shipunov).

  o Updated Slovenian translation (thanks to Jaro Lajovic and Matjaz Jeran).

  o Updated Spanish translation (thanks to Manuel Munoz Marquez).

  o Fixed omissions to R-Rcmdr.pot file (reported by Jaro Lajovic).

  o Small fixes.

Changes to Version 1.9-0

  o Improvements to boxplot dialog.

  o Improvements to save graphs dialogs (adapting suggestions of Milan Bouchet-Valat).

  o Added data import from SAS xport files (suggestion of Peter Mandeville).

  o Added ability to import Excel data sets generally via XLConnect package (suggestion of Michael Weylandt, only for Windows at this point).

  o Added IQR to numerical summaries and table of statistics (suggestion of Peter Mandeville).

  o Updated French translation (thanks to Milan Bouchet-Valat).

  o Updated Korean translation (thanks to Shin Jong-Hwa).

  o Updated Polish translation (thanks to Lukasz Daniel).

  o Updated Spanish translation (thanks to Manuel Munoz Marquez).

  o Updated Xyplot dialog (courtesy of Richard Heiberger).

  o Small fixes and improvements.

Changes to Version 1.8-5

  o New Polish translation (courtesy of Lukasz Daniel).
  
  o Small GUI improvements (suggestions/code of Milan Bouchet-Valat).
  
  o globalVariables() invoked for R 2.15.1 and above.
  
  o Added standard button icons.
   
Changes to Version 1.8-4

  o Fixes to Italian translation (from Stefano Calza).