@@ -2,6 +2,8 @@ Changes to Version 1.9-2
 
   o Updated Korean translation and getting-started document (thanks to Shin Jong-Hwa).
 
+  o Better icons for dialog buttons, new option to suppress these icons (after suggestions of Milan Bouchet-Valat).
+
   o Small fixes.
 
 Changes to Version 1.9-1
